<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signInFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryBackground"
    tools:context="be.ugent.mydigipill.fragments.SignInFragment">

    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="24dp"
        android:autofillHints="password"
        android:background="@drawable/textfield_placeholder"
        android:fontFamily="@font/open_sans_light"
        android:hint="@string/prompt_password"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:paddingStart="@dimen/padding_start_text"
        android:paddingEnd="@dimen/padding_start_text"
        android:paddingBottom="4dp"
        android:scrollbars="horizontal"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <EditText
        android:id="@+id/email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:autofillHints="username"
        android:background="@drawable/textfield_placeholder"
        android:fontFamily="@font/open_sans_light"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:paddingStart="@dimen/padding_start_text"
        android:paddingEnd="@dimen/padding_start_text"
        android:paddingBottom="4dp"
        android:scrollbars="horizontal"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/forgotPasswordButton"
        android:layout_width="158dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/buttons_large_gray"
        android:fontFamily="@font/open_sans_light"
        android:text="@string/forgot_password_button"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

</androidx.constraintlayout.widget.ConstraintLayout>
