...
            app:layout_constraintHorizontal_bias="0.189"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/signInButton"
            android:layout_width="87dp"
            android:layout_height="38dp"
            android:layout_gravity="start"
            android:layout_marginTop="@dimen/margin_top_login"
            android:background="@drawable/sign_up_bg"
            android:fontFamily="@font/open_sans_light"
...
            app:layout_constraintHorizontal_bias="0.811"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/continueButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:background="@drawable/buttons_large_blue"
            android:fontFamily="@font/open_sans_light"
            android:text="@string/continue_button"
...
